--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+codestyle = "pycodestyle ."
+test = "python -m pytest tests"
+
 [packages]
 gpxpy = "*"
 requests = "*"
